--- a/li.html
+++ b/li.html
@@ -2,5 +2,7 @@
 layout: redirected
 sitemap: false
 permalink: /li
-redirect_to:  https:www.linkedin.com/in/yitzi
+redirect_to:  https://www.linkedin.com/in/yitzi
+loading_gif: /images/linked.gif
+bgcolor: 0076B4
 ---
