--- a/fb.html
+++ b/fb.html
@@ -3,4 +3,6 @@ layout: redirected
 sitemap: false
 permalink: /fb
 redirect_to:  https://www.facebook.com/yitzi.ginzberg
+loading_gif: /images/fbgif.gif
+bgcolor: 4966A0
 ---
