--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="pure-g">
 	<div class="pure-u-1">
 		<h1>Stay tuned</h1>
-		<h2>Yitzi's blog is on temporary vacation</h2>
+		<h2>Yitzi's blog is on a short vacation</h2>
 		<div id="countdown">
 			<span class="days">00</span>&nbsp;<span class="timeRefDays">days</span>
 			<span class="hours">00</span>&nbsp;<span class="timeRefHours">hours</span>
