--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Yitzi's blog</title>
+	<title>Dummy Page</title>
 	<meta name="description" content="Simple, quick, standalone responsive placeholder Website without any additional resources">
 	<meta name="author" content="https://gist.github.com/oliveratgithub">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
