--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,18 @@
 <!-- Load Facebook SDK for JavaScript -->
+<style>
+    .fb_dialog.fb_dialog_advanced {
+        right: 18pt;
+        margin-right: 50px;
+    }
+    iframe.fb_customer_chat_bounce_in_v2 {
+        right: 9pt;
+        margin-right: 50px;
+    }
+    iframe.fb_customer_chat_bounce_out_v2 {
+        right: 9pt;
+        margin-right: 50px;
+    }
+</style>
 <div id="fb-root"></div>
 <script>
     window.fbAsyncInit = function() {
